macros/src/orchestrator/parser/tests/snapshots/macros__pipeline__parser__tests__atomic_single_task.snap
---
source: macros/src/pipeline/parser/tests/mod.rs
expression: ast
---
PipelineAst {
    graphs: [
        Graph {
            entry: Declaration(
                Task {
                    var: Some(
                        "a",
                    ),
                    typ: "TaskA",
                },
            ),
            conns: [],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
